tests/paczka1/small_fuzzy/62167827.err
Error in line 2: GLXU S901 39,9
Error in line 4: A171 A171 39,6
Error in line 10: Fq5opc3GZI A171 28,0
Error in line 8: ZW8I8Wo S901 39,1
